Move background page so that the whole image is visible Should close issue #55

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -8,6 +8,7 @@ body {
   text-align: left;
   overflow: hidden;
   background-image:url('/images/book_area.png');
+  background-position:right top;
 }
 h1 {
   border-bottom: 1px solid #1d4088;
